Fix validation errors and address code review comments

--- a/x-pack/plugins/fleet/common/openapi/bundled.yaml
+++ b/x-pack/plugins/fleet/common/openapi/bundled.yaml
@@ -93,7 +93,7 @@ paths:
             application/json:
               schema:
                 type: object
-        operationId: generate-service-token
+      operationId: generate-service-token
       parameters:
         - $ref: '#/components/parameters/kbn_xsrf'
       requestBody:
@@ -119,7 +119,7 @@ paths:
             application/json:
               schema:
                 type: object
-        operationId: generate-service-token
+      operationId: generate-service-token
       parameters:
         - $ref: '#/components/parameters/kbn_xsrf'
       requestBody:
@@ -133,9 +133,9 @@ paths:
                   type: string
                 value:
                   type: string
-  /epm/_bulk:
-    post:
-      summary: Packages - Bulk install
+  /epm/categories:
+    get:
+      summary: Package categories
       tags: []
       responses:
         '200':
@@ -150,39 +150,16 @@ paths:
                     items:
                       type: object
                       properties:
-                        name:
+                        id:
                           type: string
-                        version:
+                        title:
                           type: string
-      operationId: bulk-install-packages
-    parameters: []
-  /epm/categories:
-    get:
-      summary: Package categories
-      tags: []
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema: null
-              type: object
-              properties:
-                items:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      id:
-                        type: string
-                      title:
-                        type: string
-                      count:
-                        type: number
-                    required:
-                      - id
-                      - title
-                      - count
+                        count:
+                          type: number
+                      required:
+                        - id
+                        - title
+                        - count
       operationId: get-package-categories
   /epm/packages/limited:
     get:
@@ -219,6 +196,29 @@ paths:
                     items:
                       $ref: '#/components/schemas/search_result'
       operationId: list-all-packages
+    parameters: []
+  /epm/packages/_bulk:
+    post:
+      summary: Packages - Bulk install
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  items:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        name:
+                          type: string
+                        version:
+                          type: string
+      operationId: bulk-install-packages
     parameters: []
   /epm/packages/{pkgkey}:
     get:
@@ -456,7 +456,7 @@ paths:
               properties:
                 force:
                   type: boolean
-  /epm/packages/{pkgName}/{pkgVersion}/{filePath*}:
+  /epm/packages/{pkgName}/{pkgVersion}/{filePath}:
     get:
       summary: Packages - Get file from registry
       tags: []
@@ -795,42 +795,24 @@ paths:
                 properties:
                   body:
                     type: array
-                    items: number
+                    items:
+                      type: number
                   statusCode:
                     type: number
                   headers:
                     type: string
-        operationId: new-agent-action
+      operationId: new-agent-action
       parameters:
         - $ref: '#/components/parameters/kbn_xsrf'
       requestBody:
         required: true
         content:
           application/json:
-            schema: null
-            title: Agent action
-            oneOf:
-              - type: object
-                properties:
-                  type:
-                    type: string
-                    enum:
-                      - POLICY_CHANGE
-                      - UNENROLL
-                      - UPGRADE
-                      - POLICY_REASSIGN
-              - type: object
-                properties:
-                  data:
-                    type: object
-                    properties:
-                      oneOf:
-                        type: string
-                        enum:
-                          - debug
-                          - info
-                          - warning
-                          - error
+            schema:
+              type: object
+              properties:
+                action:
+                  $ref: '#/components/schemas/agent_action'
   /agents/{agentId}/reassign:
     parameters:
       - schema:
@@ -1565,13 +1547,14 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  hasErrors:
-                    type: boolean
-                  diff:
-                    schema: null
-                    $ref: '#/components/schemas/upgrade_diff'
+                type: array
+                items:
+                  type: object
+                  properties:
+                    hasErrors:
+                      type: boolean
+                    diff:
+                      $ref: '#/components/schemas/upgrade_diff'
                   required:
                     - hasErrors
   /package_policies/{packagePolicyId}:
@@ -2162,6 +2145,34 @@ components:
               type: string
           required:
             - version
+    agent_action:
+      title: Agent action
+      oneOf:
+        - properties:
+            data:
+              type: string
+            ack_data:
+              type: string
+            type:
+              type: string
+              enum:
+                - POLICY_CHANGE
+                - UNENROLL
+                - UPGRADE
+                - POLICY_REASSIGN
+        - properties:
+            type:
+              type: string
+            data:
+              type: object
+              properties:
+                log_level:
+                  type: string
+                  enum:
+                    - debug
+                    - info
+                    - warning
+                    - error
     new_agent_policy:
       title: New agent policy
       type: object
@@ -2338,7 +2349,27 @@ components:
     upgrade_diff:
       title: Package policy Upgrade dryrun
       type: array
-      items: {}
+      items:
+        allOf:
+          - $ref: '#/components/schemas/package_policy'
+          - type: object
+            allOf:
+              - $ref: '#/components/schemas/new_package_policy'
+              - type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        key:
+                          type: string
+                        message:
+                          type: string
+                  missingVars:
+                    type: array
+                    items:
+                      type: string
     update_package_policy:
       title: Update package policy
       type: object
@@ -2395,7 +2426,11 @@ components:
           type: string
         description:
           type: string
-      required: null
+      required:
+        - name
+        - namespace
+        - policy_id
+        - enabled
     output:
       title: Output
       type: object
