--- a/x-pack/plugins/fleet/common/openapi/entrypoint.yaml
+++ b/x-pack/plugins/fleet/common/openapi/entrypoint.yaml
@@ -26,19 +26,20 @@ paths:
   /service_tokens:
     $ref: paths/service_tokens.yaml
   # EPM / integrations endpoints
-  /epm/_bulk:
-    $ref: paths/epm@bulk.yaml
+
   /epm/categories:
     $ref: paths/epm@categories.yaml
   /epm/packages/limited:
     $ref: paths/epm@limited_list.yaml
   /epm/packages:
     $ref: paths/epm@packages.yaml
+  /epm/packages/_bulk:
+    $ref: paths/epm@packages_bulk.yaml
   '/epm/packages/{pkgkey}':
     $ref: 'paths/epm@packages@{pkgkey}_deprecated.yaml'
   '/epm/packages/{pkgName}/{pkgVersion}':
     $ref: 'paths/epm@packages@{pkg_name}@{pkg_version}.yaml'
-  '/epm/packages/{pkgName}/{pkgVersion}/{filePath*}':
+  '/epm/packages/{pkgName}/{pkgVersion}/{filePath}':
     $ref: paths/epm@get_file.yaml
   '/epm/packages/{pkgName}/stats':
     $ref: 'paths/epm@packages@{pkg_name}@stats.yaml'
