--- a/x-pack/plugins/fleet/common/openapi/paths/agents@{agent_id}@actions.yaml
+++ b/x-pack/plugins/fleet/common/openapi/paths/agents@{agent_id}@actions.yaml
@@ -18,12 +18,12 @@ post:
               body:
                 type: array
                 items:
-                  number
+                  type: number
               statusCode:
                 type: number
               headers:
                 type: string
-    operationId: new-agent-action
+  operationId: new-agent-action
   parameters:
     - $ref: ../components/headers/kbn_xsrf.yaml
   requestBody:
@@ -31,4 +31,7 @@ post:
     content:
       application/json:
         schema:
-        $ref: ../components/schemas/agent_action.yaml
+          type: object
+          properties:
+              action:
+                $ref: ../components/schemas/agent_action.yaml
