--- a/x-pack/plugins/alerting/server/saved_objects/mappings.json
+++ b/x-pack/plugins/alerting/server/saved_objects/mappings.json
@@ -99,6 +99,9 @@
             "properties": {
               "history": {
                 "properties": {
+                  "duration": {
+                    "type": "long"
+                  },
                   "success": {
                     "type": "boolean"
                   },
@@ -109,6 +112,15 @@
               },
               "calculated_metrics": {
                 "properties": {
+                  "p50": {
+                    "type": "long"
+                  },
+                  "p95": {
+                    "type": "long"
+                  },
+                  "p99": {
+                    "type": "long"
+                  },
                   "success_ratio": {
                     "type": "float"
                   }
