Add flags to pass synthtrace scenario and configuration options

--- a/x-pack/plugins/apm/scripts/bootstrap_apm/src/config/ecctl_config.json
+++ b/x-pack/plugins/apm/scripts/bootstrap_apm/src/config/ecctl_config.json
@@ -1,7 +1,7 @@
 {
   "host": "https://staging.found.no",
-  "api_key": "API_KEY",
-  "region": "us-west-2",
+  "api_key": "YOUR_STAGING_API_KEY",
+  "region": "gcp-us-central1", // gcp-us-central1 only available region in staging
   "output": "text",
   "timeout": 30000000000,
   "insecure": true
