--- a/x-pack/plugins/monitoring_collection/tsconfig.json
+++ b/x-pack/plugins/monitoring_collection/tsconfig.json
@@ -11,5 +11,7 @@
   ],
   "references": [
     { "path": "../../../src/core/tsconfig.json" },
+    { "path": "../../../src/plugins/usage_collection/tsconfig.json" },
+    { "path": "../monitoring/tsconfig.json" },
   ]
 }
