Save the number of executed/scheduled actions (#123567)
* Save the number of executed/scheduled actions of the last rule execution in the rule saved object and the event log

--- a/x-pack/plugins/alerting/server/saved_objects/mappings.json
+++ b/x-pack/plugins/alerting/server/saved_objects/mappings.json
@@ -120,6 +120,9 @@
       },
       "executionStatus": {
         "properties": {
+          "numberOfTriggeredActions": {
+            "type": "long"
+          },
           "status": {
             "type": "keyword"
           },
