--- a/x-pack/plugins/observability/tsconfig.json
+++ b/x-pack/plugins/observability/tsconfig.json
@@ -28,6 +28,7 @@
     { "path": "../rule_registry/tsconfig.json" },
     { "path": "../spaces/tsconfig.json" },
     { "path": "../timelines/tsconfig.json"},
-    { "path": "../translations/tsconfig.json" }
+    { "path": "../translations/tsconfig.json" },
+    { "path": "../cloud/tsconfig.json" }
   ]
 }
