support setting id in new agent policy API

--- a/x-pack/plugins/fleet/common/openapi/bundled.yaml
+++ b/x-pack/plugins/fleet/common/openapi/bundled.yaml
@@ -2363,6 +2363,8 @@ components:
       title: New agent policy
       type: object
       properties:
+        id:
+          type: string
         name:
           type: string
         namespace:
@@ -2376,6 +2378,9 @@ components:
             enum:
               - metrics
               - logs
+      required:
+        - name
+        - namespace
     new_package_policy:
       title: New package policy
       type: object
