chore(NA): splits types from code on @kbn/storybook (#124199)
* chore(NA): splits types from code on @kbn/storybook

* chore(NA): correct export syntax

Co-authored-by: Kibana Machine <42973632+kibanamachine@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -608,6 +608,7 @@
     "@types/kbn__server-http-tools": "link:bazel-bin/packages/kbn-server-http-tools/npm_module_types",
     "@types/kbn__server-route-repository": "link:bazel-bin/packages/kbn-server-route-repository/npm_module_types",
     "@types/kbn__std": "link:bazel-bin/packages/kbn-std/npm_module_types",
+    "@types/kbn__storybook": "link:bazel-bin/packages/kbn-storybook/npm_module_types",
     "@types/kbn__telemetry-tools": "link:bazel-bin/packages/kbn-telemetry-tools/npm_module_types",
     "@types/kbn__ui-shared-deps-npm": "link:bazel-bin/packages/kbn-ui-shared-deps-npm/npm_module_types",
     "@types/kbn__ui-shared-deps-src": "link:bazel-bin/packages/kbn-ui-shared-deps-src/npm_module_types",
