--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -124,6 +124,7 @@ filegroup(
       "//packages/kbn-server-http-tools:build_types",
       "//packages/kbn-server-route-repository:build_types",
       "//packages/kbn-std:build_types",
+      "//packages/kbn-storybook:build_types",
       "//packages/kbn-telemetry-tools:build_types",
       "//packages/kbn-ui-shared-deps-npm:build_types",
       "//packages/kbn-ui-shared-deps-src:build_types",
