revert yml manifest change

--- a/x-pack/test/fleet_api_integration/apis/fixtures/test_packages/experimental/0.1.0/manifest.yml
+++ b/x-pack/test/fleet_api_integration/apis/fixtures/test_packages/experimental/0.1.0/manifest.yml
@@ -1,6 +1,6 @@
 format_version: 1.0.0
-name: technical preview
-title: technical preview integration
+name: experimental
+title: experimental integration
 description: This is a test package for testing technical preview packages
 version: 0.1.0
 categories: []
