chore(NA): adds backport config for 8.2.0 bump (#124411)
(cherry picked from commit 3b63ca1f593d7aa78f1182e14e16c2ace7e30a75)

# Conflicts:
#	.backportrc.json

--- a/.backportrc.json
+++ b/.backportrc.json
@@ -1,7 +1,8 @@
 {
   "upstream": "elastic/kibana",
   "targetBranchChoices": [
-    { "name": "master", "checked": true },
+    "main",
+    "8.1",
     "8.0",
     "7.17",
     "7.16",
@@ -34,7 +35,7 @@
   ],
   "targetPRLabels": ["backport"],
   "branchLabelMapping": {
-    "^v8.1.0$": "master",
+    "^v8.2.0$": "main",
     "^v(\\d+).(\\d+).\\d+$": "$1.$2"
   },
   "autoMerge": true,
