--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -33,6 +33,7 @@ filegroup(
       "//packages/kbn-interpreter:build",
       "//packages/kbn-io-ts-utils:build",
       "//packages/kbn-logging:build",
+      "//packages/kbn-logging-mocks:build",
       "//packages/kbn-mapbox-gl:build",
       "//packages/kbn-monaco:build",
       "//packages/kbn-optimizer:build",
@@ -101,6 +102,8 @@ filegroup(
       "//packages/kbn-i18n-react:build_types",
       "//packages/kbn-interpreter:build_types",
       "//packages/kbn-io-ts-utils:build_types",
+      "//packages/kbn-logging:build_types",
+      "//packages/kbn-logging-mocks:build_types",
       "//packages/kbn-mapbox-gl:build_types",
       "//packages/kbn-monaco:build_types",
       "//packages/kbn-optimizer:build_types",
