[ci-stats] send test results to ci-stats service (#123740)
* [ci-stats] send test results to ci-stats service

* move export to export type

(cherry picked from commit cc0380a4613b27129a888dde673bd2d412d62b73)

# Conflicts:
#	packages/kbn-dev-utils/BUILD.bazel
#	packages/kbn-test/BUILD.bazel

--- a/packages/kbn-dev-utils/BUILD.bazel
+++ b/packages/kbn-dev-utils/BUILD.bazel
@@ -45,6 +45,7 @@ NPM_MODULE_EXTRA_FILES = [
 RUNTIME_DEPS = [
   "//packages/kbn-std",
   "//packages/kbn-utils",
+  "//packages/kbn-std",
   "@npm//@babel/core",
   "@npm//axios",
   "@npm//chalk",
