search session benchmark

--- a/x-pack/plugins/data_enhanced/tsconfig.json
+++ b/x-pack/plugins/data_enhanced/tsconfig.json
@@ -27,5 +27,6 @@
     { "path": "../task_manager/tsconfig.json" },
 
     { "path": "../features/tsconfig.json" },
+    { "path": "../event_log/tsconfig.json" }
   ]
 }
