--- a/src/plugins/data/tsconfig.json
+++ b/src/plugins/data/tsconfig.json
@@ -24,6 +24,6 @@
     { "path": "../kibana_utils/tsconfig.json" },
     { "path": "../kibana_react/tsconfig.json" },
     { "path": "../field_formats/tsconfig.json" },
-    { "path": "../data_views/tsconfig.json" }
+    { "path": "../data_views/tsconfig.json" },
   ]
 }
