--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -278,7 +278,7 @@
 /src/plugins/advanced_settings/ @elastic/kibana-core
 /x-pack/plugins/global_search_bar/ @elastic/kibana-core
 #CC# /src/core/server/csp/ @elastic/kibana-core
-#CC# /src/plugins/saved_objects/ @elastic/kibana-core
+#CC# /src/plugins/saved_objects/ @elastic/kibana-vis-editors
 #CC# /x-pack/plugins/cloud/ @elastic/kibana-core
 #CC# /x-pack/plugins/features/ @elastic/kibana-core
 #CC# /x-pack/plugins/global_search/ @elastic/kibana-core
