--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -34,6 +34,7 @@ filegroup(
       "//packages/kbn-io-ts-utils:build",
       "//packages/kbn-logging:build",
       "//packages/kbn-mapbox-gl:build",
+      "//packages/kbn-ml-utils:build",
       "//packages/kbn-monaco:build",
       "//packages/kbn-optimizer:build",
       "//packages/kbn-plugin-generator:build",
@@ -102,6 +103,7 @@ filegroup(
       "//packages/kbn-interpreter:build_types",
       "//packages/kbn-io-ts-utils:build_types",
       "//packages/kbn-mapbox-gl:build_types",
+      "//packages/kbn-ml-utils:build_types",
       "//packages/kbn-monaco:build_types",
       "//packages/kbn-optimizer:build_types",
       "//packages/kbn-plugin-generator:build_types",
