--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "@kbn/interpreter": "link:bazel-bin/packages/kbn-interpreter",
     "@kbn/io-ts-utils": "link:bazel-bin/packages/kbn-io-ts-utils",
     "@kbn/logging": "link:bazel-bin/packages/kbn-logging",
+    "@kbn/logging-mocks": "link:bazel-bin/packages/kbn-logging-mocks",
     "@kbn/mapbox-gl": "link:bazel-bin/packages/kbn-mapbox-gl",
     "@kbn/monaco": "link:bazel-bin/packages/kbn-monaco",
     "@kbn/react-field": "link:bazel-bin/packages/kbn-react-field",
@@ -586,6 +587,8 @@
     "@types/kbn__i18n-react": "link:bazel-bin/packages/kbn-i18n-react/npm_module_types",
     "@types/kbn__interpreter": "link:bazel-bin/packages/kbn-interpreter/npm_module_types",
     "@types/kbn__io-ts-utils": "link:bazel-bin/packages/kbn-io-ts-utils/npm_module_types",
+    "@types/kbn__logging": "link:bazel-bin/packages/kbn-logging/npm_module_types",
+    "@types/kbn__logging-mocks": "link:bazel-bin/packages/kbn-logging-mocks/npm_module_types",
     "@types/kbn__mapbox-gl": "link:bazel-bin/packages/kbn-mapbox-gl/npm_module_types",
     "@types/kbn__monaco": "link:bazel-bin/packages/kbn-monaco/npm_module_types",
     "@types/kbn__optimizer": "link:bazel-bin/packages/kbn-optimizer/npm_module_types",
