--- a/packages/kbn-logging-mocks/BUILD.bazel
+++ b/packages/kbn-logging-mocks/BUILD.bazel
@@ -2,19 +2,16 @@ load("@npm//@bazel/typescript:index.bzl", "ts_config")
 load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
 load("//src/dev/bazel:index.bzl", "jsts_transpiler", "pkg_npm", "pkg_npm_types", "ts_project")
 
-PKG_BASE_NAME = "kbn-config"
-PKG_REQUIRE_NAME = "@kbn/config"
-TYPES_PKG_REQUIRE_NAME = "@types/kbn__config"
+PKG_BASE_NAME = "kbn-logging-mocks"
+PKG_REQUIRE_NAME = "@kbn/logging-mocks"
+TYPES_PKG_REQUIRE_NAME = "@types/kbn__logging-mocks"
 
 SOURCE_FILES = glob(
   [
     "src/**/*.ts",
   ],
   exclude = [
-    "**/*.test.*",
-    "**/__fixtures__",
-    "**/__mocks__",
-    "**/__snapshots__"
+    "**/*.test.*"
   ],
 )
 
@@ -27,39 +24,16 @@ filegroup(
 
 NPM_MODULE_EXTRA_FILES = [
   "package.json",
-  "README.md"
 ]
 
 RUNTIME_DEPS = [
-  "//packages/elastic-safer-lodash-set",
-  "//packages/kbn-config-schema",
-  "//packages/kbn-logging",
-  "//packages/kbn-logging-mocks",
-  "//packages/kbn-std",
-  "//packages/kbn-utility-types",
-  "//packages/kbn-i18n",
-  "@npm//js-yaml",
-  "@npm//load-json-file",
-  "@npm//lodash",
-  "@npm//rxjs",
-  "@npm//type-detect",
+  "//packages/kbn-logging"
 ]
 
 TYPES_DEPS = [
-  "//packages/elastic-safer-lodash-set:npm_module_types",
-  "//packages/kbn-config-schema:npm_module_types",
   "//packages/kbn-logging:npm_module_types",
-  "//packages/kbn-logging-mocks:npm_module_types",
-  "//packages/kbn-std:npm_module_types",
-  "//packages/kbn-utility-types:npm_module_types",
-  "//packages/kbn-i18n:npm_module_types",
-  "@npm//load-json-file",
-  "@npm//rxjs",
   "@npm//@types/jest",
-  "@npm//@types/js-yaml",
-  "@npm//@types/lodash",
   "@npm//@types/node",
-  "@npm//@types/type-detect",
 ]
 
 jsts_transpiler(
