--- a/src/plugins/embeddable/tsconfig.json
+++ b/src/plugins/embeddable/tsconfig.json
@@ -14,9 +14,9 @@
   "references": [
     { "path": "../../core/tsconfig.json" },
     { "path": "../inspector/tsconfig.json" },
-    { "path": "../saved_objects/tsconfig.json" },
     { "path": "../kibana_utils/tsconfig.json" },
     { "path": "../kibana_react/tsconfig.json" },
     { "path": "../ui_actions/tsconfig.json" },
+    { "path": "../usage_collection/tsconfig.json" },
   ]
 }
