--- a/.github/workflows/add-to-fleet-project.yml
+++ b/.github/workflows/add-to-fleet-project.yml
@@ -10,7 +10,9 @@ jobs:
       contains(github.event.issue.labels.*.name, 'Team:Fleet') && (
         contains(github.event.issue.labels.*.name, 'technical debt') ||
         contains(github.event.issue.labels.*.name, 'bug') ||
-        contains(github.event.issue.labels.*.name, 'performance')
+        contains(github.event.issue.labels.*.name, 'performance') ||
+        contains(github.event.issue.labels.*.name, 'failed-test') || 
+        contains(github.event.issue.labels.*.name, 'chore')
       )
     steps:
       - uses: octokit/graphql-action@v2.x
@@ -28,5 +30,7 @@ jobs:
           projectid: ${{ env.PROJECT_ID }}
           contentid: ${{ github.event.issue.node_id }}
         env:
+          # https://github.com/orgs/elastic/projects/763
           PROJECT_ID: "PN_kwDOAGc3Zs4AAsH6"
+          # Token with `write:org` access
           GITHUB_TOKEN: ${{ secrets.FLEET_TECH_KIBANA_USER_TOKEN }}
