--- a/src/plugins/shared_ux/tsconfig.json
+++ b/src/plugins/shared_ux/tsconfig.json
@@ -17,5 +17,7 @@
     {
       "path": "../../core/tsconfig.json"
     },
+    { "path": "../../plugins/kibana_react/tsconfig.json" },
+    { "path": "../../plugins/data_view_editor/tsconfig.json" }
   ]
 }
