--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -132,6 +132,7 @@ filegroup(
       "//packages/kbn-telemetry-tools:build_types",
       "//packages/kbn-test:build_types",
       "//packages/kbn-test-jest-helpers:build_types",
+      "//packages/kbn-typed-react-router-config:build_types",
       "//packages/kbn-ui-shared-deps-npm:build_types",
       "//packages/kbn-ui-shared-deps-src:build_types",
       "//packages/kbn-ui-theme:build_types",
