--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "branches",
     "branching"
   ],
-  "version": "6.2.1",
+  "version": "6.3.0-beta-10",
   "main": "./dist/entrypoint.module.js",
   "types": "dist/entrypoint.module.d.ts",
   "bin": {
@@ -23,12 +23,12 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "test -f ./dist/scripts/runPostinstall.js && node ./dist/scripts/runPostinstall.js || echo 'Dist folder missing'",
-    "postversion": "yarn extractPackageVersion && yarn build",
+    "version": "echo \"Bumping version\" && yarn extractPackageVersion && git add src/utils/packageVersion.ts && yarn build",
     "prepare": "husky install",
-    "prepublishOnly": "yarn build",
+    "prepublishOnly": "yarn lint",
     "build": "tsc --project ./tsconfig.prod.json",
     "extractPackageVersion": "node -p \"'export const PACKAGE_VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" | prettier > src/utils/packageVersion.ts",
-    "lint": "tsc --project ./tsconfig.test.json && eslint './**/*.{ts,js}'",
+    "lint": "echo \"Running lint\" && tsc --project ./tsconfig.test.json && eslint './**/*.{ts,js}'",
     "start": "ts-node --transpile-only ./src/entrypoint.cli.ts",
     "test-all": "yarn lint && jest --config ./jest.config.all.js",
     "test-mutation": "jest --config ./jest.config.mutation.js",
@@ -66,7 +66,9 @@
     "axios": "^0.25.0",
     "dedent": "^0.7.0",
     "del": "^6.0.0",
+    "dotenv": "^16.0.0",
     "find-up": "^5.0.0",
+    "graphql-tag": "^2.12.6",
     "inquirer": "^8.2.0",
     "lodash": "^4.17.21",
     "make-dir": "^3.1.0",
@@ -76,7 +78,8 @@
     "terminal-link": "^2.1.1",
     "utility-types": "^3.10.0",
     "winston": "^3.5.1",
-    "yargs": "^17.3.1"
+    "yargs": "^17.3.1",
+    "yargs-parser": "^21.0.0"
   },
   "devDependencies": {
     "@types/core-js": "^2.5.5",
@@ -88,25 +91,24 @@
     "@types/safe-json-stringify": "^1.1.2",
     "@types/yargs": "^17.0.8",
     "@types/yargs-parser": "^20.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.0.0",
+    "eslint-plugin-jest": "^26.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "graphql": "^16.3.0",
     "graphql-config": "^4.1.0",
-    "graphql-tag": "^2.12.6",
     "husky": "^7.0.4",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-snapshot-serializer-ansi": "^1.0.0",
     "lint-staged": "^12.3.3",
     "nock": "^13.2.4",
     "prettier": "^2.5.1",
     "strip-ansi": "^6.0.1",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
 }
