--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "branches",
     "branching"
   ],
-  "version": "6.3.0-beta-10",
+  "version": "7.0.0",
   "main": "./dist/entrypoint.module.js",
   "types": "dist/entrypoint.module.d.ts",
   "bin": {
