--- a/package.json
+++ b/package.json
@@ -444,7 +444,7 @@
     "@babel/traverse": "^7.16.10",
     "@babel/types": "^7.16.8",
     "@bazel/ibazel": "^0.15.10",
-    "@bazel/typescript": "^3.8.0",
+    "@bazel/typescript": "5.1.0",
     "@cypress/code-coverage": "^3.9.12",
     "@cypress/snapshot": "^2.1.7",
     "@cypress/webpack-preprocessor": "^5.6.0",
