--- a/src/plugins/shared_ux/tsconfig.json
+++ b/src/plugins/shared_ux/tsconfig.json
@@ -17,6 +17,7 @@
     {
       "path": "../../core/tsconfig.json"
     },
-    { "path": "../../plugins/data_view_editor/tsconfig.json" }
+    { "path": "../../plugins/data_view_editor/tsconfig.json" },
+    { "path": "../../plugins/data_views/tsconfig.json" },
   ]
 }
