--- a/src/plugins/shared_ux/tsconfig.json
+++ b/src/plugins/shared_ux/tsconfig.json
@@ -18,6 +18,6 @@
       "path": "../../core/tsconfig.json"
     },
     { "path": "../data_view_editor/tsconfig.json" },
-    { "path": "../data_views/tsconfig.json" },
+    { "path": "../data_views/tsconfig.json" }
   ]
 }
