--- a/.buildkite/pipelines/pull_request/post_build.yml
+++ b/.buildkite/pipelines/pull_request/post_build.yml
@@ -1,6 +1,6 @@
 steps:
-  - wait: ~
-    continue_on_failure: true
+  # - wait: ~
+  #   continue_on_failure: true
 
-  - command: .buildkite/scripts/lifecycle/post_build.sh
-    label: Post-Build
+  # - command: .buildkite/scripts/lifecycle/post_build.sh
+  #   label: Post-Build
