A little more logging

--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -2,6 +2,8 @@ steps:
   - command: .buildkite/scripts/steps/timeout_test.sh
     label: 'Build Timeout Test'
     parallelism: 100
+    concurrency: 100
+    concurrency_group: 'timeout-test'
     agents:
       queue: n2-2
-    timeout_in_minutes: 30
+    timeout_in_minutes: 10
