move trusted apps to security_solution

--- a/x-pack/plugins/osquery/cypress/tsconfig.json
+++ b/x-pack/plugins/osquery/cypress/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "../../../../tsconfig.base.json",
     "include": [
       "**/*"
-    ],
+, "../../security_solution/cypress/screens/trusted_apps.ts", "../../security_solution/cypress/cloud_upgrade_integration/trusted_apps/trusted_apps_post.spec.ts"    ],
     "exclude": [
       "target/**/*"
     ],
