Pin `react-markdown/html-to-react` version to `1.4.8`.

--- a/package.json
+++ b/package.json
@@ -82,13 +82,13 @@
     "**/handlebars/uglify-js": "^3.14.3",
     "**/hoist-non-react-statics": "^3.3.2",
     "**/html-minifier/uglify-js": "^3.14.3",
-    "**/html-to-react/ramda": "0.28.0",
     "**/isomorphic-fetch/node-fetch": "^2.6.1",
     "**/istanbul-lib-coverage": "^3.2.0",
     "**/json-schema": "^0.4.0",
     "**/minimist": "^1.2.5",
     "**/node-forge": "^1.2.1",
     "**/pdfkit/crypto-js": "4.0.0",
+    "**/react-markdown/html-to-react": "^1.4.8",
     "**/react-syntax-highlighter": "^15.3.1",
     "**/react-syntax-highlighter/**/highlight.js": "^10.4.1",
     "**/trim": "1.0.1",
