--- a/package.json
+++ b/package.json
@@ -1116,7 +1116,8 @@
     "xterm": "^5.1.0",
     "yauzl": "^2.10.0",
     "yazl": "^2.5.1",
-    "zod": "^3.22.3"
+    "zod": "^3.22.3",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@apidevtools/swagger-parser": "^10.0.3",
