save to library
add to lib

fix redirect path

fix up

unit test

[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

unit tests

--- a/x-pack/plugins/security_solution/tsconfig.json
+++ b/x-pack/plugins/security_solution/tsconfig.json
@@ -177,6 +177,7 @@
     "@kbn/core-application-common",
     "@kbn/openapi-generator",
     "@kbn/es",
+    "@kbn/subscription-tracking",
     "@kbn/react-kibana-mount"
   ]
 }
