[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/security_solution/tsconfig.json
+++ b/x-pack/plugins/security_solution/tsconfig.json
@@ -172,6 +172,7 @@
     "@kbn/security-solution-features",
     "@kbn/content-management-plugin",
     "@kbn/subscription-tracking",
-    "@kbn/openapi-generator"
+    "@kbn/openapi-generator",
+    "@kbn/react-kibana-mount"
   ]
 }
