fix ld client race condition

--- a/x-pack/plugins/cloud_integrations/cloud_experiments/kibana.jsonc
+++ b/x-pack/plugins/cloud_integrations/cloud_experiments/kibana.jsonc
@@ -14,7 +14,8 @@
     ],
     "requiredPlugins": [
       "cloud",
-      "dataViews"
+      "dataViews",
+      "kibanaUtils"
     ],
     "optionalPlugins": [
       "usageCollection"
