--- a/x-pack/plugins/cloud_integrations/cloud_experiments/tsconfig.json
+++ b/x-pack/plugins/cloud_integrations/cloud_experiments/tsconfig.json
@@ -19,6 +19,7 @@
     "@kbn/logging",
     "@kbn/logging-mocks",
     "@kbn/utility-types",
+    "@kbn/kibana-utils-plugin",
   ],
   "exclude": [
     "target/**/*",
