chore(typecheck): set up reference between osquery and test_serverless in tsconfig to avoid outside-of-project ref errors

--- a/x-pack/plugins/osquery/cypress/tsconfig.json
+++ b/x-pack/plugins/osquery/cypress/tsconfig.json
@@ -28,6 +28,10 @@
       "path": "../tsconfig.json",
       "force": true
     },
+    {
+      "path": "../../../test_serverless/tsconfig.json",
+      "force": true
+    },
     "@kbn/security-solution-plugin",
     "@kbn/fleet-plugin",
     "@kbn/cases-plugin"
