--- a/x-pack/plugins/asset_manager/tsconfig.json
+++ b/x-pack/plugins/asset_manager/tsconfig.json
@@ -23,6 +23,8 @@
     "@kbn/apm-data-access-plugin",
     "@kbn/core-http-browser-mocks",
     "@kbn/logging",
-    "@kbn/metrics-data-access-plugin"
+    "@kbn/metrics-data-access-plugin",
+    "@kbn/core-elasticsearch-server",
+    "@kbn/core-saved-objects-api-server"
   ]
 }
