--- a/x-pack/plugins/observability/tsconfig.json
+++ b/x-pack/plugins/observability/tsconfig.json
@@ -90,7 +90,8 @@
     "@kbn/content-management-plugin",
     "@kbn/deeplinks-observability",
     "@kbn/react-kibana-mount",
-    "@kbn/react-kibana-context-theme"
+    "@kbn/react-kibana-context-theme",
+    "@kbn/shared-ux-link-redirect-app"
   ],
   "exclude": [
     "target/**/*"
