[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/packages/kbn-management/settings/application/tsconfig.json
+++ b/packages/kbn-management/settings/application/tsconfig.json
@@ -22,5 +22,7 @@
     "@kbn/management-settings-utilities",
     "@kbn/management-settings-components-form",
     "@kbn/i18n",
+    "@kbn/test-jest-helpers",
+    "@kbn/core-application-browser",
   ]
 }
