--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "**/@babel/traverse": "^7.21.2",
     "**/@babel/types": "^7.21.2",
     "**/@types/babel__generator/@babel/types": "^7.21.0",
-    "**/@types/node": "18.17.1",
+    "**/@types/node": "18.17.5",
     "**/@types/react": "^16.14.25",
     "**/@types/react-dom": "^16.9.8",
     "**/@typescript-eslint/utils": "5.62.0",
@@ -581,7 +581,7 @@
     "@types/mustache": "^0.8.31",
     "@types/ncp": "^2.0.1",
     "@types/nock": "^10.0.3",
-    "@types/node": "18.17.1",
+    "@types/node": "18.17.5",
     "@types/node-fetch": "2.6.4",
     "@types/node-forge": "^1.3.1",
     "@types/nodemailer": "^6.4.0",
@@ -680,12 +680,12 @@
     "cpy": "^8.1.1",
     "css-loader": "^3.4.2",
     "cssnano": "5.0.0",
-    "cypress": "12.17.4",
-    "cypress-axe": "^1.4.0",
+    "cypress": "^13.3.0",
+    "cypress-axe": "^1.5.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-multi-reporters": "^1.6.3",
     "cypress-pipe": "^2.0.0",
-    "cypress-real-events": "^1.10.0",
+    "cypress-real-events": "^1.10.3",
     "debug": "^2.6.9",
     "delete-empty": "^2.0.0",
     "dependency-check": "^4.1.0",
