[security_assistant] Add support for Mermaid charts

--- a/package.json
+++ b/package.json
@@ -950,6 +950,7 @@
     "md5": "^2.1.0",
     "mdast-util-to-hast": "10.2.0",
     "memoize-one": "^6.0.0",
+    "mermaid": "^10.4.0",
     "mime": "^2.4.4",
     "mime-types": "^2.1.27",
     "minimatch": "^3.1.2",
@@ -1053,6 +1054,7 @@
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.2",
     "unified": "9.2.2",
+    "unist-util-visit": "^2.0.3",
     "use-resize-observer": "^9.1.0",
     "usng.js": "^0.4.5",
     "utility-types": "^3.10.0",
