--- a/x-pack/plugins/lens/tsconfig.json
+++ b/x-pack/plugins/lens/tsconfig.json
@@ -90,6 +90,7 @@
     "@kbn/search-response-warnings",
     "@kbn/logging",
     "@kbn/core-plugins-server",
+    "@kbn/text-based-languages",
   ],
   "exclude": [
     "target/**/*",
