--- a/x-pack/plugins/observability_ai_assistant/tsconfig.json
+++ b/x-pack/plugins/observability_ai_assistant/tsconfig.json
@@ -46,7 +46,8 @@
     "@kbn/es-query",
     "@kbn/rule-registry-plugin",
     "@kbn/licensing-plugin",
-    "@kbn/share-plugin"
+    "@kbn/share-plugin",
+    "@kbn/files-plugin"
   ],
   "exclude": ["target/**/*"]
 }
