Reverts removal of postcss-loader

--- a/package.json
+++ b/package.json
@@ -1564,6 +1564,7 @@
     "playwright": "=1.37.0",
     "pngjs": "^3.4.0",
     "postcss": "^8.4.31",
+    "postcss-loader": "^4.2.0",
     "prettier": "^2.7.1",
     "proxy": "^2.1.1",
     "q": "^1.5.1",
