--- a/x-pack/plugins/security_solution/tsconfig.json
+++ b/x-pack/plugins/security_solution/tsconfig.json
@@ -175,6 +175,7 @@
     "@kbn/subscription-tracking",
     "@kbn/openapi-generator",
     "@kbn/unified-data-table",
-    "@kbn/unified-doc-viewer"
+    "@kbn/unified-doc-viewer",
+    "@kbn/unified-field-list"
   ]
 }
