--- a/x-pack/plugins/security_solution/kibana.jsonc
+++ b/x-pack/plugins/security_solution/kibana.jsonc
@@ -49,7 +49,8 @@
       "dataViewEditor",
       "stackConnectors",
       "discover",
-      "notifications"
+      "notifications",
+      "charts",
     ],
     "optionalPlugins": [
       "cloudExperiments",
