[APM] Introduce custom dashboards tab in service overview (#166789)
## Summary




https://github.com/elastic/kibana/assets/3369346/3598bfb7-83fc-4eb0-b185-20d689442a68





### Notes

1. ~~Storing the dashboard name in the saved object may become outdated
and cause confusion, as users have the ability to update the dashboard
title on the dashboard page.
 [**UPDATED**]  Fetch dynamically from the dashboard module api
3. UI we don't have  an indicator useContextFilter 

## TODO

- [x] API tests
- [x] Dynamic title
- [x] Deep-link for dashboard
- [x] Fetch services that match the dashboard kuery

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>

--- a/packages/kbn-check-mappings-update-cli/current_mappings.json
+++ b/packages/kbn-check-mappings-update-cli/current_mappings.json
@@ -3131,6 +3131,22 @@
       }
     }
   },
+  "apm-custom-dashboards": {
+    "properties": {
+      "dashboardSavedObjectId": {
+        "type": "keyword"
+      },
+      "kuery": {
+        "type": "text"
+      },
+      "serviceEnvironmentFilterEnabled": {
+        "type": "boolean"
+      },
+      "serviceNameFilterEnabled": {
+        "type": "boolean"
+      }
+    }
+  },
   "enterprise_search_telemetry": {
     "dynamic": false,
     "properties": {}
