[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/observability_log_explorer/tsconfig.json
+++ b/x-pack/plugins/observability_log_explorer/tsconfig.json
@@ -31,7 +31,8 @@
     "@kbn/deeplinks-observability",
     "@kbn/core-notifications-browser",
     "@kbn/core-mount-utils-browser-internal",
-    "@kbn/xstate-utils"
+    "@kbn/xstate-utils",
+    "@kbn/shared-ux-utility"
   ],
   "exclude": [
     "target/**/*"
