--- a/package.json
+++ b/package.json
@@ -949,7 +949,7 @@
     "md5": "^2.1.0",
     "mdast-util-to-hast": "10.2.0",
     "memoize-one": "^6.0.0",
-    "mermaid": "^10.4.0",
+    "mermaid": "9.3.0",
     "mime": "^2.4.4",
     "mime-types": "^2.1.27",
     "minimatch": "^3.1.2",
