[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/asset_manager/tsconfig.json
+++ b/x-pack/plugins/asset_manager/tsconfig.json
@@ -25,6 +25,7 @@
     "@kbn/logging",
     "@kbn/metrics-data-access-plugin",
     "@kbn/core-elasticsearch-server",
-    "@kbn/core-saved-objects-api-server"
+    "@kbn/core-saved-objects-api-server",
+    "@kbn/core-saved-objects-api-server-mocks"
   ]
 }
