fix tests and use internal user

--- a/x-pack/test_serverless/shared/lib/security/kibana_roles/project_controller_security_roles.yml
+++ b/x-pack/test_serverless/shared/lib/security/kibana_roles/project_controller_security_roles.yml
@@ -335,7 +335,6 @@ soc_manager:
         - auditbeat-*
         - endgame-*
         - filebeat-*
-        - logs-*
         - packetbeat-*
         - winlogbeat-*
       privileges:
@@ -346,6 +345,7 @@ soc_manager:
         - .siem-signals-*
         - .preview.alerts-security*
         - .internal.preview.alerts-security*
+        - logs-*
       privileges:
         - read
         - write
@@ -355,6 +355,7 @@ soc_manager:
         - .items*
       privileges:
         - read
+        - maintenance
         - write
     - names:
         - metrics-endpoint.metadata_current_*
@@ -401,6 +402,10 @@ soc_manager:
         - all
       resources: "*"
     - application: osquery
+      privileges:
+        - all
+      resources: "*"
+    - application: indexPatterns
       privileges:
         - all
       resources: "*"
