fixing things after merge with main

--- a/src/plugins/unified_doc_viewer/kibana.jsonc
+++ b/src/plugins/unified_doc_viewer/kibana.jsonc
@@ -8,6 +8,6 @@
     "server": false,
     "browser": true,
     "requiredBundles": ["kibanaUtils", "kibanaReact"],
-    "requiredPlugins": ["data", "fieldFormats"],
+    "requiredPlugins": ["data", "fieldFormats", "uiActions"],
   }
 }
