[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/src/plugins/unified_doc_viewer/tsconfig.json
+++ b/src/plugins/unified_doc_viewer/tsconfig.json
@@ -23,7 +23,8 @@
     "@kbn/core",
     "@kbn/shared-ux-utility",
     "@kbn/core-analytics-browser-mocks",
-    "@kbn/core-ui-settings-browser-mocks"
+    "@kbn/core-ui-settings-browser-mocks",
+    "@kbn/ui-actions-plugin"
   ],
   "exclude": [
     "target/**/*",
