[Profiling] Fix setup page for Viewer users

--- a/x-pack/plugins/profiling/kibana.jsonc
+++ b/x-pack/plugins/profiling/kibana.jsonc
@@ -9,7 +9,8 @@
     "configPath": ["xpack", "profiling"],
     "optionalPlugins": [
       "spaces", 
-      "usageCollection"
+      "usageCollection",
+      "security"
     ],
     "requiredPlugins": [
       "charts",
